--- a/manifest.json
+++ b/manifest.json
@@ -10,11 +10,11 @@
     	"https://*/*"
   	],
 	"icons": {
-		"16": "icon-16.png",
-		"128": "icon-128.png"
+		"16": "icon/icon-16.png",
+		"128": "icon/icon-128.png"
 	},
 	"browser_action": {
-		"default_icon": "icon-16.png",
+		"default_icon": "icon/icon-16.png",
 		"default_popup": "popup.html"
 	},
 	"content_scripts": [
